fixed product card spacing and images stuff

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -47,3 +47,32 @@ main {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
+
+
+.card-img-top {
+    height: 200px;
+    object-fit: fill;
+}
+
+.card-body {
+    height: 225px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-text.description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    line-height: 1.3em;
+    max-height: calc(1.3em * 3);
+}
+
+
+
+
+
